# meson-example

./: LICENSE  README.md  meson.build
include/: hello.h  meson.build
src/: hello.c  meson.build
tests/: basic.c  meson.build  truncate_long_name.c
